--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bonheur+Royale&display=swap" rel="stylesheet">
     <title>Document</title>
-<script defer src="runtime.bundle.js"></script><script defer src="main.bundle.js"></script></head>
+</head>
 <body>
     <header>
       <div id="content">
